assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@1,700&family=Work+Sans:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}


body {
    font-family: "Work Sans", sans-serif;
    font-weight: 300;
}

/* headings and logo */

/* make header stick to top of page */
header {
    position: fixed;
    width: 100%;
    height: 85px;
    z-index: 3;
}


h1, h2 {
    font-family: "Epilogue", sans-serif;
}

#logo {
    font-family: "Work Sans", sans-serif;
    font-size: 160%;
    font-style: italic;
    letter-spacing: 2px;
}

/* navigation links */

.header { 
    width: 100%;
    display: flex;
    justify-content: space-between;
    margin: 0 20px;
    text-align: center;
}
  
#menu {
     font-size: 130%;
     background-color: #f6f4e8;
     color: #1d3124
}

#menu, #logo{
    line-height: 85px;
}

#menu li {
    list-style-type: none;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover { 
    border-bottom: 2px dotted #1d3124;
 }
 
  #menu h1:hover {
       border-bottom: 2px dotted #1d3124;
    }

#sign-up {
    border: 1px solid #1d3124;
    padding: 10px;
}

/* hero image and cover text */

#hero-outer {
    height: 500px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 500px;
    width: 100%;
    background: url('../images/man-meditating-on-dock.jpg') no-repeat center center;

/* animates zoom effect on home page */

animation-name: hero-zoom;
animation-duration: 5s;
animation-fill-mode: backwards;
}

/* creates level of zoom for hero image */
@keyframes hero-zoom {
    from{
        transform: scale(1.1);
    }
    to {
        transform: scale(1.0);
    }
}

#cover-text {
        font-size: 140%;
        font-family: Epilogue, sans-serif;
        letter-spacing: 3px;
    
        width: 400px;
        height: 90px;
    
        padding-top: 40px;
        padding-left: 10px;
    
        background-color: rgba(229, 149, 96, 0.7);
    
        bottom: 50%;
        left: 35%;
        position: absolute;
        border-radius: 15px;
}

#cover-text, #cover-text h2 {
    color: #f6f4e8;
    text-align: center;
}

/* ways to release section */

#ways-to-release {
    background-color: #bacec1;
    height: 500px;
    width: 100%;
    color: #1d3124;
    text-align: center;
}

#ways-to-release h2 {
    font-size: 200%;
    padding: 50px
}

/* meditation and yoga cards */

.card {
    font-size: 140%;
    font-family: Epilogue, sans-serif;
    background-color: #f6f4e8;
    text-decoration: none;
    color: #1d3124;

    height: 150px;
    width: 20%;
    border: 2px solid #1d3124;
    border-radius: 15px;

    padding-top: 100px;
    float: left;
    margin-left: 10%;
}

#ways-to-release a:hover {
    color: #f6f4e8;
    background-color: #e59560;
}

#middle-card {
    font-family: "Work Sans", sans-serif;
    font-size: 100%;
    background-color: #1d3124;
    color: #f6f4e8;
}

#newsletter {
    clear: left;
}

